[build-system]
requires = [
    "setuptools>=61.0",
    "typing-extensions; python_version <'3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "prologix_gpib_async"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "A Python AsyncIO library for the Prologix GPIB (Ethernet) adapter"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Home Automation",
]
keywords = ["Prologix", "GPIB", "API"]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "prologix_gpib_async.__version__"}

[project.urls]
"Homepage" = "https://github.com/PatrickBaus/pyAsyncPrologixGpib"
"Bug Tracker" = "https://github.com/PatrickBaus/pyAsyncPrologixGpib/issues"

[project.optional-dependencies]
dev = ["pylint", ]
